# starknet-operators

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Makefile  PROJECT  README.md  TODO.md  flake.nix  go.mod  go.sum  index.yaml
.github/workflows/: build-image.yml  lint.yml  release-charts.yml  test-chart.yml
.zed/: settings.json
api/v1alpha1/: groupversion_info.go  starknetrpc_types.go  zz_generated.deepcopy.go
charts/pathfinder-operator/: Chart.yaml  values.yaml
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: kustomization.yaml  role.yaml  starknetrpc_admin_role.yaml  starknetrpc_editor_role.yaml  starknetrpc_viewer_role.yaml
config/samples/: kustomization.yaml  pathfinder_v1alpha1_starknetrpc.yaml
crates/pathfinder-operator/: Cargo.toml  Dockerfile  Justfile
crates/pathfinder-operator/docs/: ReconciliationLoop.md
crates/pathfinder-operator/src/: controller.rs  crd.rs  crdgen.rs  drift.rs  lib.rs  main.rs
crates/pathfinder-operator/src/k8s_helper/: container.rs  metadata.rs  mod.rs  resources.rs  volume.rs
crates/pathfinder-operator/src/reconcilier/: implementation.rs  mod.rs  pod.rs  pvc.rs  snapshot.rs  status.rs
crates/pathfinder-operator/yaml/: crd.yaml  deployment.yaml  gateway.yaml  mainnet.yaml  service.yaml  test.yaml  validator.yaml
deploy/chart/: Chart.yaml  values.yaml
docs/: TODO.md  monitoring.md
hack/: helm.patch
(+44 files in other folders)
