[package]
name = "pathfinder-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_31", "schemars"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.6"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
async-trait = "0.1.88"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.8.4"
tracing = { version = "0.1.41", features = ["log"] }
thiserror = "2.0.12"


[lib]
name = "controller"
path = "src/lib.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "pathfinder-operator"
path = "src/main.rs"
